--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Database config
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME="scandiweb_ecommerce_task"
-DB_USER="root"
-DB_PASSWORD=""
+DB_HOST='ep-broad-queen-a2koppxw.eu-central-1.aws.neon.tech'
+DB_PORT=5432
+DB_NAME='scandiwebs'
+DB_USER='scandiweb_owner'
+DB_PASSWORD="hqLKm5t7Mjel"
 DB_CHARSET="utf8mb4"
